<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background"
...

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/recipe_title"
            android:focusable="true"
            android:onClick="addPhoto"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_title_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/purple_200"
...
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/recipe_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/recipe_prep"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:maxLength="4"
        android:hint="@string/recipe_prep_time"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/recipe_image_card"
        app:layout_constraintStart_toStartOf="@+id/recipe_image_card"
        app:layout_constraintTop_toBottomOf="@+id/recipe_image_card" />

    <EditText
        android:id="@+id/recipe_servings"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/recipe_servings"
        android:maxLength="4"
...
            android:maxLength="150"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe_ingredients_list"
        android:layout_width="408dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:minHeight="250dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient" />

    <TextView
        android:id="@+id/recipe_ingredients_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/recipe_ingredients"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/recipe_image_card"
        app:layout_constraintTop_toBottomOf="@+id/recipe_category_spinner" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
...
            android:backgroundTint="@color/cancel"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:backgroundTint="@color/confirm"
            android:onClick="confirm"
            android:text="@string/confirm"
...
