<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredient_layout"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.RecipeAddEditIngredientActivity">

...
        android:id="@+id/recipe_ingredient_categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/category"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_ingredient_category"
        app:layout_constraintEnd_toStartOf="@+id/recipe_ingredient_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipe_ingredient_category"
        app:layout_constraintVertical_bias="0.379" />

    <Spinner
...
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/recipe_ingredient_editCategory"
        app:layout_constraintTop_toBottomOf="@+id/recipe_ingredient_unit" />

    <ImageButton
        android:id="@+id/recipe_ingredient_editCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="editCategories"
...
        app:layout_constraintTop_toTopOf="@+id/recipe_ingredient_category"
        app:layout_constraintVertical_bias="0.0"
        android:background="@android:color/transparent"
        app:srcCompat="@android:drawable/ic_menu_edit"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingredient_description_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        app:counterEnabled="true"
        android:textColorHint="@color/purple_200"
        app:counterTextColor="@color/white"
        app:boxBackgroundColor="@color/background"
        app:counterMaxLength="30">
    <AutoCompleteTextView
        android:id="@+id/ingredient_description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:minHeight="48dp"
...
        android:textColorHint="@color/purple_200"
        android:completionThreshold="1"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/ingredient_amount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/amount"
        android:maxLength="10"
...
